force-app/main/default/objects/RV_Cavity__c/RV_Cavity__c.object-meta.xml
<CustomObject>
    <label>RV Cavity</label>
    <nameField>
        <label>RV Cavity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV Cavity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>