force-app/main/default/objects/RV_Cavity__c/fields/CavityDiameter1__c.field-meta.xml
<CustomField>
    <fullName>CavityDiameter1__c</fullName>
    <label>CavityDiameter1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>