force-app/main/default/objects/RV_Cavity__c/fields/CavityDiameter2__c.field-meta.xml
<CustomField>
    <fullName>CavityDiameter2__c</fullName>
    <label>CavityDiameter2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>