force-app/main/default/objects/RV_Cavity__c/fields/CavityHeight1__c.field-meta.xml
<CustomField>
    <fullName>CavityHeight1__c</fullName>
    <label>CavityHeight1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>