force-app/main/default/objects/RV_Cavity__c/fields/EffSealingDiameter__c.field-meta.xml
<CustomField>
    <fullName>EffSealingDiameter__c</fullName>
    <label>EffSealingDiameter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>