force-app/main/default/objects/RV_Cavity__c/fields/StemDiameter__c.field-meta.xml
<CustomField>
    <fullName>StemDiameter__c</fullName>
    <label>StemDiameter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>