force-app/main/default/objects/RV_Cavity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>Direction__c</columns>
    <columns>SpacerYN__c</columns>
    <columns>StemDiameter__c</columns>
    <columns>EffSealingDiameter__c</columns>
    <columns>CavityDiameter1__c</columns>
    <columns>CavityHeight1__c</columns>
    <columns>CavityDiameter2__c</columns>
    <columns>CavityHeight2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>